<resources>
    <string name="app_name">Calculatrice</string>

    <!-- LABELS -->
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_Point">.</string>
    <string name="_Plus">+</string>
    <string name="_Minus">-</string>
    <string name="_Multiply">x</string>
    <string name="_Division">÷</string>
    <string name="_OpenPar">(</string>
    <string name="_ClosePar">)</string>
    <string name="_Equal">=</string>
    <string name="_c">C</string>
    <string name="_Example">0123456789</string>
    <!-- LABELS -->
</resources>
