<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.henrique.calculatrice.MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_3"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPoint"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_4"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_5"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_6"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_7"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_8"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_9"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button0"
        android:layout_width="170dp"
        android:layout_height="85dp"
        android:background="@drawable/zero_button_pt"
        android:text="@string/_0"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonPoint"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/number_button_pt"
        android:text="@string/_Point"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="129dp"
        android:layout_height="85dp"
        android:background="@drawable/symbol_button_large_pt"
        android:text="@string/_Plus"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="129dp"
        android:layout_height="85dp"
        android:background="@drawable/symbol_button_large_pt"
        android:text="@string/_Minus"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="129dp"
        android:layout_height="85dp"
        android:background="@drawable/symbol_button_large_pt"
        android:text="@string/_Multiply"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="129dp"
        android:layout_height="85dp"
        android:background="@drawable/symbol_button_large_pt"
        android:text="@string/_Division"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMultiply"
        app:layout_constraintStart_toEndOf="@+id/buttonClosePar" />

    <Button
        android:id="@+id/buttonOpenPar"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/symbol_button_small_pt"
        android:text="@string/_OpenPar"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonClosePar"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/symbol_button_small_pt"
        android:text="@string/_ClosePar"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/buttonOpenPar" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="129dp"
        android:layout_height="85dp"
        android:background="@drawable/equal_button_pt"
        android:text="@string/_Equal"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPoint" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:background="@drawable/c_button_pt"
        android:text="@string/_c"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/_Example"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDivision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
